# moduleSystem

./: CHANGELOG.md  CMakeLists.txt  FIXES_AND_IMPROVEMENTS.md  Info.plist.in  QUICKSTART.md  README.md  generate_xcode.sh
build_xcode/: CMakeCache.txt  cmake_install.cmake
build_xcode/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_xcode/CMakeScripts/: ReRunCMake.make
build_xcode/ModuleSystem.xcodeproj/: project.pbxproj
build_xcode/ModuleSystem.xcodeproj/project.xcworkspace/xcuserdata/comradeacg.xcuserdatad/: UserInterfaceState.xcuserstate
build_xcode/ModuleSystem.xcodeproj/xcuserdata/comradeacg.xcuserdatad/xcschemes/: xcschememanagement.plist
build_xcode/ModuleSystem_autogen/: moc_predefs_Debug.h  mocs_compilation.cpp
build_xcode/ModuleSystem_autogen/include_Debug/6YEA5652QU/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PerformanceMonitor.cpp  moc_PerformanceMonitor.cpp.d  moc_ResizableSlotWidget.cpp.d
build_xcode/ModuleSystem_autogen/include_Debug/DL2EU2DS2K/: moc_CustomModuleTemplate.cpp.d  moc_ExampleModule.cpp.d  moc_ModuleBase.cpp.d  moc_ModuleManager.cpp.d
build_xcode/test_modules_autogen/include_Debug/DL2EU2DS2K/: moc_CustomModuleTemplate.cpp  moc_CustomModuleTemplate.cpp.d  moc_ExampleModule.cpp.d  moc_ModuleBase.cpp.d  moc_ModuleManager.cpp.d
include/: MainWindow.h  PerformanceMonitor.h  ResizableSlotWidget.h
include/modules/: CalculatorModule.h  CustomModuleTemplate.h  ExampleModule.h  ModuleBase.h  ModuleManager.h
src/: MainWindow.cpp  MainWindow.cpp.backup  PerformanceMonitor.cpp  ResizableSlotWidget.cpp  main.cpp  test_modules.cpp
src/modules/: CalculatorModule.cpp  CustomModuleTemplate.cpp  ExampleModule.cpp  ModuleBase.cpp  ModuleBase_old.cpp  ModuleManager.cpp
